add tables and include db

--- a/Wpf2Praktika/Wpf2Praktika/App.config
+++ b/Wpf2Praktika/Wpf2Praktika/App.config
@@ -18,6 +18,5 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="db_Artur_ShabunovEntities" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=www.vk.edu.ee;initial catalog=db_Artur_Shabunov;persist security info=True;user id=t154331;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
+  <add name="db_Artur_ShabunovEntities" connectionString="metadata=res://*/Model.csdl|res://*/Model.ssdl|res://*/Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=www.vk.edu.ee;initial catalog=db_Artur_Shabunov;persist security info=True;user id=t154331;password=t154331;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
 </configuration>
