add update, insert, delete group

--- a/Wpf2Praktika/Wpf2Praktika/App.config
+++ b/Wpf2Praktika/Wpf2Praktika/App.config
@@ -18,5 +18,7 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-  <add name="db_Artur_ShabunovEntities" connectionString="metadata=res://*/Model.csdl|res://*/Model.ssdl|res://*/Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=www.vk.edu.ee;initial catalog=db_Artur_Shabunov;persist security info=True;user id=t154331;password=t154331;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+    <add name="db_Artur_ShabunovEntities" connectionString="metadata=res://*/Model.csdl|res://*/Model.ssdl|res://*/Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=www.vk.edu.ee;initial catalog=db_Artur_Shabunov;persist security info=True;user id=t154331;password=t154331;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="db_Artur_ShabunovEntitiesInput" connectionString="metadata=res://*/ModelInputKolledz.csdl|res://*/ModelInputKolledz.ssdl|res://*/ModelInputKolledz.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=vct.vk;initial catalog=db_Artur_Shabunov;persist security info=True;user id=t154331;password=t154331;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
 </configuration>
