--- a/Wpf2Praktika/Wpf2Praktika/Wpf2Praktika.csproj
+++ b/Wpf2Praktika/Wpf2Praktika/Wpf2Praktika.csproj
@@ -63,6 +63,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="ComboBoxItem.cs" />
     <Compile Include="Model.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
